# infoarena_arhiva_educationala

./: .gitignore  000_euclid2.h  001_cmlsc.h  005_strmatch.h  008_scmax.h  009_dijkstra.h  010_ciur.h  011_permutari.h  012_lgput.h  013_bfs.h  014_dfs.h  016_rmq.h  017_combinari.h  022_disjoint.h  025_heapuri.h  026_apm.h  051_rucsac.h  058_darb.h  CMakeLists.txt  README.md  main.cpp  output.out
