cmake_minimum_required(VERSION 3.17)
project(infoarena_arhiva_educationala)

set(CMAKE_CXX_STANDARD 14)

add_executable(infoarena_arhiva_educationala main.cpp 001_cmlsc.h 000_euclid2.h 005_strmatch.h 008_scmax.h 010_ciur.h 009_dijkstra.h 011_permutari.h 012_lgput.h 013_bfs.h 014_dfs.h 017_combinari.h 016_rmq.h 025_heapuri.h 058_darb.h)